<resources>
    <string name="app_name">Harmony</string>
    <string name="title_planner">Planner</string>
    <string name="title_task">Task</string>
    <string name="title_alarm">Alarm</string>
    <string name="_00">00</string>
    <string name="_000000">00:00:00</string>
    <string name="total_sleep_time">Total sleep time:</string>
    <string name="time_to_sleep">Time to sleep</string>
    <string name="additional_time_to_sleep">The app will give you %1$s minutes to fall asleep</string>
    <string name="change">Change</string>
    <string name="alarm_is_set_for">Alarm is set for %1$i</string>
    <string name="countdown">Countdown: %1$s</string>
    <string name="alarm_time">alarmTime</string>
    <string name="time_add">timeAdd</string>
    <string name="add_some_tasks">Add some tasks</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="mark_as_important">Mark as important!</string>
    <string name="dummy_task">Dummy Task</string>
    <string name="reminder">Reminder</string>
    <string name="add">Add</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="qr_code">QRcode</string>
    <string name="no_alarm">No alarm</string>
    <string name="your_alarm_will_ring_in">Your alarm will ring in</string>
    <string name="add_some_plans">Add some plans</string>
    <string name="dummy_planner">Vezbe Istezanja</string>
    <string name="dummy_opt_planner">Radi vezbe za trbusnjake i obavezno kardio</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="notification">Notification</string>
    <string name="note">Note</string>
    <string name="optional">Optional</string>
    <string name="duration">Duration</string>
    <string name="dummy_time">11:47:32</string>
    <string name="qr_code_download">QR Code download</string>
    <string name="qr_code_check">HarmonyQR2021</string>
    <string name="start_time">startTime</string>
    <string name="id">id</string>
</resources>