<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/cardViewTask"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutTask"
        android:paddingBottom="8dp"
        android:layout_marginBottom="8dp"
        android:background="?colorSecondaryVariant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/minimizeMaximize"
            android:background="@android:color/transparent"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/editTask"
            android:layout_margin="12dp"
            android:tint="@color/black"
            android:src="@drawable/ic_baseline_edit_24"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/checked"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            android:buttonTint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/titleTask"
            android:text="@string/dummy_task"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/checked"
            app:layout_constraintTop_toTopOf="@id/checked"
            app:layout_constraintBottom_toBottomOf="@+id/checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/markAsImportant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:text="@string/mark_as_important"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/reminder"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/reminder"
            app:layout_constraintTop_toTopOf="@id/reminder" />

        <TextView
            android:id="@+id/reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/reminder"
            app:drawableBottomCompat="@drawable/ic_notifications_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/checked"
            app:layout_constraintTop_toBottomOf="@id/titleTask" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>